Moved zCyl3DToECyl3D from zeo_nurbs3d_shape to zeo_shape3d_ecyl. Moved zSphere3DToEllips3D from zeo_nurbs3d_shape to zeo_shape3d_ellips. Replaced inclusion of zeo_shape3d.h with zeo_elem3d.h and zeo_ph3d.h in zeo_bv3d. Defined ZEO_ELEM_DEFAULT_DIV, and redefined ZEO_SHAPE_DEFAULT_DIV as ZEO_ELEM_DEFAULT_DIV. Separated zeo_elem3d_sphere from zeo_shape3d_sphere, and moved zSphere3DCreate, zSphere3DInit, zSphere3DAlloc, zSphere3DCopy, zSphere3DMirror, zSphere3DXform, zSphere3DXformInv, zSphere3DClosest, zSphere3DDistFromPoint, zSphere3DPointIsInside, zSphere3DFrom2, zSphere3DFrom3, zSphere3DFrom4, zSphere3DVolume, zSphere3DBaryInertiaMass, and zSphere3DBaryInertia to it. Separated zeo_elem2d_disk from zeo_elem2d, and moved zDisk2D and zEllips2D to it. Modified the type of the third argument of _zAABB3DTest from zDir to zAxis. Renamed _zAABox3DEnlarge to zAABox3DEnlarge, and made it public. Moved zBox3DCreate, zBox3DInit, zBox3DAlloc, zBox3DCopy, zBox3DMirror, zBox3DXform, zBox3DXformInv, zBox3DClosest, zBox3DDistFromPoint, zBox3DPointIsInside, zBox3DVolume, zBox3DBaryInertiaMass, zBox3DBaryInertia, zBox3DVert, zAABox3DToBox3D, _zAABox3DEnlarge, zBox3DToAABox3D, and zBox3DValueFPrint from zeo_shape3d_box to zeo_elem3d_box. Renamed zeo_elem2d/3d_aabox to zeo_elem2d/3d_box.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,13 @@
+2025.09.20. Moved zCyl3DToECyl3D from zeo_nurbs3d_shape to zeo_shape3d_ecyl. [zeo_nurbs3d_shape, zeo_shape3d_ecyl]
+2025.09.20. Moved zSphere3DToEllips3D from zeo_nurbs3d_shape to zeo_shape3d_ellips. [zeo_nurbs3d_shape, zeo_shape3d_ellips]
+2025.09.20. Replaced inclusion of zeo_shape3d.h with zeo_elem3d.h and zeo_ph3d.h in zeo_bv3d. [zeo_bv3d]
+2025.09.20. Defined ZEO_ELEM_DEFAULT_DIV, and redefined ZEO_SHAPE_DEFAULT_DIV as ZEO_ELEM_DEFAULT_DIV. [zeo_elem3d_sphere, and zeo_shape3d]
+2025.09.20. Separated zeo_elem3d_sphere from zeo_shape3d_sphere, and moved zSphere3DCreate, zSphere3DInit, zSphere3DAlloc, zSphere3DCopy, zSphere3DMirror, zSphere3DXform, zSphere3DXformInv, zSphere3DClosest, zSphere3DDistFromPoint, zSphere3DPointIsInside, zSphere3DFrom2, zSphere3DFrom3, zSphere3DFrom4, zSphere3DVolume, zSphere3DBaryInertiaMass, and zSphere3DBaryInertia to it. [zeo_elem3d, zeo_elem3d_sphere, zeo_shape3d_sphere]
+2025.09.20. Separated zeo_elem2d_disk from zeo_elem2d, and moved zDisk2D and zEllips2D to it. [zeo_elem2d, zeo_elem2d_disk]
+2025.09.20. Modified the type of the third argument of _zAABB3DTest from zDir to zAxis. [zeo_bv3d_aabb]
+2025.09.20. Renamed _zAABox3DEnlarge to zAABox3DEnlarge, and made it public. [zeo_elem3d_box]
+2025.09.20. Moved zBox3DCreate, zBox3DInit, zBox3DAlloc, zBox3DCopy, zBox3DMirror, zBox3DXform, zBox3DXformInv, zBox3DClosest, zBox3DDistFromPoint, zBox3DPointIsInside, zBox3DVolume, zBox3DBaryInertiaMass, zBox3DBaryInertia, zBox3DVert, zAABox3DToBox3D, _zAABox3DEnlarge, zBox3DToAABox3D, and zBox3DValueFPrint from zeo_shape3d_box to zeo_elem3d_box. [zeo_elem3d_box, zeo_shape3d_box]
+2025.09.20. Renamed zeo_elem2d/3d_aabox to zeo_elem2d/3d_box. [zeo_elem2d_box, zeo_elem3d_box]
 2025.09.13. Added _zMat3DSymmetrize, zMat3DSymmetrize, zMat3DSymmetrizeDRC, _zMat3DIsSymmetric, and zMat3DIsSymmetric. [zeo_mat3d]
 2025.09.13. Added orthonormalize method to zMat3D for C++. [zeo_mat3d]
 2025.09.12. Debugged zMat3DToAA (thanks to Daishi Kaneta). [zeo_mat3d]
