Defined zPH3DVertArray and zPH3DFaceArray. Renamed zPH3DScale and zPH3DFlip to zPH3DScaleDRC and zPH3DFlipDRC, respectively, and reimplemented zPH3DScale and zPH3DFlip with modified specifications. Added zPH3DAllocVert and zPH3DAllocFace, and reimplemented zPH3DAlloc and zPH3DFromZTK. Renamed members vert and face of zPH3D to vert_array and face_array, respectively. Added zPH3DAABB. Modified the types zDir of arguments of _zColChkBox3DAlong and _zColChkBox3DPerp to zAxis. Added C++ methods of zSphere3D class. Renamed member dia of zBox3D to edgespan. Renamed member f of zBox3D to frame. Added C++ methods of zBox3D class. Added C++ methods of zAABox3D class. Added const qualifier to the second argument of zAABox3DEnlarge.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,15 @@
+2025.09.20. Defined zPH3DVertArray and zPH3DFaceArray. [zeo_ph3d, zeo_ph3d_stl, zeo_ph3d_ply, zeo_bv3d_obb, zeo_col_box, zeo_col_ph]
+2025.09.20. Renamed zPH3DScale and zPH3DFlip to zPH3DScaleDRC and zPH3DFlipDRC, respectively, and reimplemented zPH3DScale and zPH3DFlip with modified specifications. [zeo_ph3d, zeo_shape3d, app]
+2025.09.20. Added zPH3DAllocVert and zPH3DAllocFace, and reimplemented zPH3DAlloc and zPH3DFromZTK. [zeo_ph3d, zeo_ph3d_stl, zeo_ph3d_ply]
+2025.09.20. Renamed members vert and face of zPH3D to vert_array and face_array, respectively. [zeo_ph3d, zeo_bv3d_obb, zeo_col_box]
+2025.09.20. Added zPH3DAABB. [zeo_ph3d]
+2025.09.20. Modified the types zDir of arguments of _zColChkBox3DAlong and _zColChkBox3DPerp to zAxis. [zeo_col_box]
+2025.09.20. Added C++ methods of zSphere3D class. [zeo_elem3d_sphere]
+2025.09.20. Renamed member dia of zBox3D to edgespan. [zeo_elem3d_box, zeo_col_box]
+2025.09.20. Renamed member f of zBox3D to frame. [zeo_elem3d_box]
+2025.09.20. Added C++ methods of zBox3D class. [zeo_elem3d_box]
+2025.09.20. Added C++ methods of zAABox3D class. [zeo_elem3d_box]
+2025.09.20. Added const qualifier to the second argument of zAABox3DEnlarge. [zeo_elem3d_box]
 2025.09.20. Added zAABox3DCreateFromSize, zAABox3DEqual, zAABox3DExpand, and zAABox3DExpandDRC. [zeo_elem3d_box]
 2025.09.20. Moved zCyl3DToECyl3D from zeo_nurbs3d_shape to zeo_shape3d_ecyl. [zeo_nurbs3d_shape, zeo_shape3d_ecyl]
 2025.09.20. Moved zSphere3DToEllips3D from zeo_nurbs3d_shape to zeo_shape3d_ellips. [zeo_nurbs3d_shape, zeo_shape3d_ellips]
