Debugged zPH3DClosest by using zTri3DSignedClosest. Abolished ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED, and reimplemented ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN. Modified _zTri3DClosestFromOrigin to use geometric approach instead of quadratic programming. Modified _zTri3DClosestFromOrigin_TestEdge not to use cached coefficient values. Added _zTri3DProjIsInside. Modified zTetra3DClosestFromOrigin to use zVec3DGrassmannProd. Added zTetra3DClosestFromOrigin and zTetra3DClosest. Added zTri3DSignedClosest and zTri3DSignedDistFromPoint. Added ZEO_ELEM_TRIXD_POINT_IS_INSIDE_PROTOTYPE and ZEO_ELEM_TRIXD_POINT_IS_INSIDE, and reimplemented zTri2DPointIsInside and zTri3DPointIsInside. Added _zTri3DClosestFromOrigin_TestEdge and _zTri3DClosestFromOrigin, and reimplemented zTri3DClosest. Abolished ZEO_ELEM_TRIXD_CLOSEST_PROTOTYPE and ZEO_ELEM_TRIXD_CLOSEST. Modified _zTri2DClosestFromOrigin and zTri2DClosest. Renamed and reimplemented _zTri2DClosestFromOriginCachedEdge to _zTri2DClosestFromOrigin_TestEdge. Modified ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED, ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN, and ZEO_ELEM_EDGEXD_CLOSEST. Reimplemented _zTri2DClosestFromOrigin to use manual inversion of the matrix. Abolished _zMulInvMat3DVec3DRow and _zMulInvMat3DVec3DInvDet, and reimplemented _zMulInvMat3DVec3D and _zMulInvMat3DMat3D. Abolished _zMat3DInvRow, and reimplemented _zMat3DInv. Added _zMulAdjMat3DMat3D and zMulAdjMat3DMat3D. Added _zMulAdjMat3DVec3DRow, _zMulAdjMat3DVec3D, and zMulAdjMat3DVec3D. Added _zMat3DAdjRow, _zMat3DAdj, and zMat3DAdj. Added zTri2DClosest, and reimplemented zTri2DDistFromPoint and zTri2DPointIsInside. Debugged zMulInvMat3DMat3D to check if the returned value of _zMulInvMat3DMat3D is the null pointer. Debugged zMulInvMat3DVec3D to check if the returned value of _zMulInvMat3DVec3D is the null pointer. Added ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED and ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN, and redefined ZEO_ELEM_EDGEXD_CLOSEST_PROTOTYPE. Added _zMulAdjMat2DVec2D

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,30 @@
+2025.10.01. Debugged zPH3DClosest by using zTri3DSignedClosest. [zeo_ph3d]
+2025.10.01. Abolished ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED, and reimplemented ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2025.10.01. Modified _zTri3DClosestFromOrigin to use geometric approach instead of quadratic programming. [zeo_elem3d]
+2025.10.01. Modified _zTri3DClosestFromOrigin_TestEdge not to use cached coefficient values. [zeo_elem3d]
+2025.10.01. Added _zTri3DProjIsInside. [zeo_elem3d]
+2025.10.01. Modified zTetra3DClosestFromOrigin to use zVec3DGrassmannProd. [zeo_elem3d]
+2025.09.30. Added zTetra3DClosestFromOrigin and zTetra3DClosest. [zeo_elem3d]
+2025.09.30. Added zTri3DSignedClosest and zTri3DSignedDistFromPoint. [zeo_elem3d]
+2025.09.30. Added ZEO_ELEM_TRIXD_POINT_IS_INSIDE_PROTOTYPE and ZEO_ELEM_TRIXD_POINT_IS_INSIDE, and reimplemented zTri2DPointIsInside and zTri3DPointIsInside. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2025.09.30. Added _zTri3DClosestFromOrigin_TestEdge and _zTri3DClosestFromOrigin, and reimplemented zTri3DClosest. [zeo_elem3d]
+2025.09.30. Abolished ZEO_ELEM_TRIXD_CLOSEST_PROTOTYPE and ZEO_ELEM_TRIXD_CLOSEST. [zeo_elemxd]
+2025.09.29. Modified _zTri2DClosestFromOrigin and zTri2DClosest. [zeo_elem2d]
+2025.09.29. Renamed and reimplemented _zTri2DClosestFromOriginCachedEdge to _zTri2DClosestFromOrigin_TestEdge. [zeo_elem2d]
+2025.09.29. Modified ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED, ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN, and ZEO_ELEM_EDGEXD_CLOSEST. [zeo_elemxd]
+2025.09.29. Reimplemented _zTri2DClosestFromOrigin to use manual inversion of the matrix. [zeo_elem2d]
+2025.09.28. Abolished _zMulInvMat3DVec3DRow and _zMulInvMat3DVec3DInvDet, and reimplemented _zMulInvMat3DVec3D and _zMulInvMat3DMat3D. [zeo_mat3d]
+2025.09.28. Abolished _zMat3DInvRow, and reimplemented _zMat3DInv. [zeo_mat3d]
+2025.09.27. Added _zMulAdjMat3DMat3D and zMulAdjMat3DMat3D. [zeo_mat3d]
+2025.09.27. Added _zMulAdjMat3DVec3DRow, _zMulAdjMat3DVec3D, and zMulAdjMat3DVec3D. [zeo_mat3d]
+2025.09.27. Added _zMat3DAdjRow, _zMat3DAdj, and zMat3DAdj. [zeo_mat3d]
+2025.09.27. Added zTri2DClosest, and reimplemented zTri2DDistFromPoint and zTri2DPointIsInside. [zeo_elem2d]
+2025.09.27. Debugged zMulInvMat3DMat3D to check if the returned value of _zMulInvMat3DMat3D is the null pointer. [zeo_mat3d]
+2025.09.27. Debugged zMulInvMat3DVec3D to check if the returned value of _zMulInvMat3DVec3D is the null pointer. [zeo_mat3d]
+2025.09.26. Added ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED and ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN, and redefined ZEO_ELEM_EDGEXD_CLOSEST_PROTOTYPE. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
+2025.09.25. Added _zMulAdjMat2DVec2D and zMulAdjMat2DVec2D, and reimplemented zMulInvMat2DVec2D and zMulInvMat2DMat2D. [zeo_mat2d]
+2025.09.25. Added _zMat2DAdj and zMat2DAdj, and reimplemented zMat2DInv. [zeo_mat2d]
+2025.09.25. Added zMat2DIsIdent. [zeo_mat2d]
 2025.09.20. Added C++ methods to create shapes to zShape3D. [zeo_shape3d, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_ellips, zeo_shape3d_cyl, zeo_shape3d_capsule, zeo_shape3d_ecyl, zeo_shape3d_cone]
 2025.09.20. Renamed Inertia and InertiaMass methods of zShape3D to inertia and inertiaMass, respectively. [zeo_shape3d]
 2025.09.20. Added default values of arguments of methods of zAABox3D, zBox3D, zSphere3D, zPH3D, and zShape3D. [zeo_elem3d_box, zeo_elem3d_sphere, zeo_ph3d, zeo_shape3d]
