--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2025.10.02. Renamed _zTri2DClosestFromOrigin and _zTri3DClosestFromOrigin to zTri2DClosestFromOrigin and zTri3DClosestFromOrigin, respectively, and made it public. [zeo_elem2d, zeo_elem3d]
+2025.10.02. Redefined ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN to make the function public, and added ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_PROTOTYPE. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
 2025.10.02. Debugged the benchmark test of GJK / MPR in example/colchk. [example]
 2025.10.01. Debugged zPH3DClosest by using zTri3DSignedClosest. [zeo_ph3d]
 2025.10.01. Abolished ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN_CACHED, and reimplemented ZEO_ELEM_EDGEXD_CLOSEST_FROM_ORIGIN. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
