Modified _zGJK and zGJKPoint to use zVec3DDataPeek. Added an interface of peek method of zVec2D/3DDataMethod class to ZEO_VECXD_DATA_METHOD_DEF_STRUCT. Added some operators of zFrame2D and zFrame3D for C++. Added direct operators of zVec2D and zVec3D for C++.

--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,8 @@
-2025.10.02. Debugged the initial procedure of _zGJK and _zGJKPoint. [zeo_col_gjk]
+2025.10.02. Modified _zGJK and zGJKPoint to use zVec3DDataPeek. [zeo_col_gjk]
+2025.10.02. Added an interface of peek method of zVec2D/3DDataMethod class to ZEO_VECXD_DATA_METHOD_DEF_STRUCT. [zeo_vecxd_data, zeo_vec2d_data, zeo_vec3d_data]
+2025.10.02. Added some operators of zFrame2D and zFrame3D for C++. [zeo_frame2d, zeo_frame3d]
+2025.10.02. Added direct operators of zVec2D and zVec3D for C++. [zeo_vec2d, zeo_vec3d]
+2025.10.02. Debugged the initial procedure of _zGJK and zGJKPoint. [zeo_col_gjk]
 2025.10.02. Debugged _zGJKSimplexMinimize, and include it into _zGJKSimplexClosest. Abolished _zGJKSimplexMinimize. [zeo_col_gjk]
 2025.10.02. Renamed _zGJKSimplexCheckSlot to _zGJKSimplexCheckDupSlot. [zeo_col_gjk]
 2025.10.02. Modified _zGJKSimplexClosest to use z*3DClosestFromOrigin instead of zQPSolveLemke. [zeo_col_gjk]
