--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,22 @@
+2025.10.08. Added const qualifiers to functions for zShape3DList class. [zeo_shape3d_list]
+2025.10.08. Added zMShape3DFromOctree and the corresponding method fromOctree for C++. [zeo_mshape3d]
+2025.10.08. Added zShape3DPutInOctree and the corresponding method putInOctree for C++. [zeo_shape3d]
+2025.10.07. Overloaded some methods of zPH3D for C++. [zeo_ph3d]
+2025.10.07. Added const qualifiers to functions for zPH3D class. [zeo_ph3d]
+2025.10.07. Overloaded some methods of zShape3D for C++. [zeo_shape3d]
+2025.10.07. Added methods of zMShape3D for C++. [zeo_mshape3d]
+2025.10.07. Added const qualifiers to functions for zMShape3D class. [zeo_mshape3d]
+2025.10.07. Renamed shape, optic, and texture to shape_array, optic_array, and texture_array, respectively. [zeo_mshape3d]
+2025.10.07. Added _zVec3DOctantToAABox3DList, zVec3DOctreeToAABox3DList, and the corresponding method toAABox3DList for C++. [zeo_vec3d_octree]
+2025.10.07. Added methods of zVec3DOctree for C++. [zeo_vec3d_octree]
+2025.10.07. Added _zVec3DOctantUnify and zVec3DOctreeUnifyOctant. [zeo_vec3d_octree]
+2025.10.07. Added _zVec3DOctantMergeSuboctant, and modified _zVec3DOctantMerge to use it. [zeo_vec3d_octree]
+2025.10.07. Added zShape3DBoxCreateFromAABox, and overloaded the method createBox for C++. [zeo_shape3d_box]
+2025.10.07. Modified definitions of zMShape3DShape, zMShape3DOptic, and zMShape3DTexture to use zArrayElem instead of zArrayElemNC. [zeo_mshape3d]
+2025.10.07. Modified zMShape3DClone and zMShape3DFromZTK to use zMShape3DAllocOpticArray, zMShape3DAllocTextureArray, and zMShape3DAllocShapeArray. [zeo_mshape3d]
+2025.10.07. Added zMShape3DAllocOpticArray, zMShape3DAllocTextureArray, and zMShape3DAllocShapeArray. [zeo_mshape3d]
+2025.10.07. Renamed _zVec3DOctantPointIsInside and _zVec3DOctantIsSmallest to zVec3DOctantPointIsInside and zVec3DOctantIsSmallest, respectively, and made them public. [zeo_vec3d_octree]
+2025.10.07. Added zAABox3DList class. [zeo_elem3d_box]
 2025.10.03. Added aabb method without any arguments (overload) of zPH3D for C++. [zeo_ph3d]
 2025.10.03. Modified zAABox3DEqual to use _zVec3DEqual instead of zVec3DEqual. [zeo_elem3d_box]
 2025.10.03. Added zAABox2DXMin, zAABox2DYMin, zAABox2DXMax, zAABox2DYMax, zAABox2DDepth, zAABox2DWidth, zAABox2DCenter, zAABox2DCreateFromSize, zAABox2DEqual, zAABox2DExpand, zAABox2DExpandDRC, zAABox2DClosest, zAABox2DSqrDistFromPoint, zAABox2DDistFromPoint, zAABox2DVert, zAABox2DEnlarge, zAABox2DFPrint, and C++ methods. [zeo_elem2d_box]
