Modified zIntersectPH3D to neglect mutual penetration shorter than ZEO_INTERSECT_PH3D_THRESHOLD.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,4 @@
+2025.10.20. Modified zIntersectPH3D to neglect mutual penetration shorter than ZEO_INTERSECT_PH3D_THRESHOLD. [zeo_col_ph]
 2025.10.13. Defined ZEO_WARN_MSHAPE_EMPTY_OCTREE for zMShape3DFromOctree. [zeo_mshape3d]
 2025.10.13. Renamed _zQHFacetBB to _zQHFacetTestBeneathBeyond. [zeo_bv3d_convexhull]
 2025.10.12. Modified zTri3DClosestFromOrigin to check if the given triangle is degenerated. [zeo_elem3d]
