Redefined the operator == for zVec2D, zVec3D, zVec6D, and zMat3D for C++. Renamed createZYX, createZYZ, and createAA methods of zMat3D to createFromZYX, createFromZYZ, and createFromAA, respectively. Modified specification of inv method of zMat3D for C++. Added transposeDirect method to zMat3D for C++. Modified specification of the method transpose of zMat3D for C++. Added const qualifiers to arguments of methods of zVec2D, zVec3D, zVec6D, and zMat3D for C++. Modified test/makefile to compile C++ programs. Modified ZEO_VECXD_DATA_DEF_STRUCT to define C++ methods of zVecXDData. Debugged zVecXDData*Fetch. enamed ZEO_VECXD_DATA_DEF_STATIC_METHOD to _ZEO_VECXD_DATA_DEF_STATIC_METHOD, and redefined ZEO_VECXD_DATA_DEF_STATIC_METHOD to define constructor and destructor for C++. Added _zVecXDDataArrayDirectSize and _zVecXDDataArrayDirectIsEmpty. Abolished _zVecXDDataArrayPtrAdd, and assign _zVecXDDataDummyAdd instead. Modified specifications of _zVecXDDataArraySize and _zVecXDDataArrayIsEmpty to see the currently occupied size of the array. Added member capacity of zVecXDDataMethod, and defined zVecXDDataCapacity, _zVecXDDataDummyCapacity, _zVecXDDataArrayCapacity, _zVecXDDataListCapacity, _zVecXDDataAddrListCapacity, _zVecXDDataArrayPtrCapacity, _zVecXDDataListPtrCapacity, and _zVecXDDataAddrListPtrCapacity.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,17 @@
+2025.11.02. Redefined the operator == for zVec2D, zVec3D, zVec6D, and zMat3D for C++. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d]
+2025.11.02. Renamed createZYX, createZYZ, and createAA methods of zMat3D to createFromZYX, createFromZYZ, and createFromAA, respectively. [zeo_mat3d]
+2025.11.02. Modified specification of inv method of zMat3D for C++. [zeo_mat3d]
+2025.11.02. Added transposeDirect method to zMat3D for C++. [zeo_mat3d]
+2025.11.02. Modified specification of the method transpose of zMat3D for C++. [zeo_mat3d]
+2025.11.02. Added const qualifiers to arguments of methods of zVec2D, zVec3D, zVec6D, and zMat3D for C++. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d]
+2025.11.02. Modified test/makefile to compile C++ programs. [test]
+2025.11.02. Modified ZEO_VECXD_DATA_DEF_STRUCT to define C++ methods of zVecXDData. [zeo_vecxd_data]
+2025.11.02. Debugged zVecXDData*Fetch. [zeo_vecxd_data]
+2025.11.02 Renamed ZEO_VECXD_DATA_DEF_STATIC_METHOD to _ZEO_VECXD_DATA_DEF_STATIC_METHOD, and redefined ZEO_VECXD_DATA_DEF_STATIC_METHOD to define constructor and destructor for C++. [zeo_vecxd_data]
+2025.11.02. Added _zVecXDDataArrayDirectSize and _zVecXDDataArrayDirectIsEmpty. [zeo_vecxd_data]
+2025.11.02. Abolished _zVecXDDataArrayPtrAdd, and assign _zVecXDDataDummyAdd instead. [zeo_vecxd_data]
+2025.11.02. Modified specifications of _zVecXDDataArraySize and _zVecXDDataArrayIsEmpty to see the currently occupied size of the array. [zeo_vecxd_data]
+2025.11.02. Added member capacity of zVecXDDataMethod, and defined zVecXDDataCapacity, _zVecXDDataDummyCapacity, _zVecXDDataArrayCapacity, _zVecXDDataListCapacity, _zVecXDDataAddrListCapacity, _zVecXDDataArrayPtrCapacity, _zVecXDDataListPtrCapacity, and _zVecXDDataAddrListPtrCapacity. [zeo_vecxd_data]
 2025.10.28. Renamed array_ptr, list_ptr, and addrlist_ptr members of zVecXDData to array_ref, list_ref, and addrlist_ref, respectively. [zeo_vecxd_data]
 2025.10.28. Modified types of members array, list, and addrlist of zVecXDData to pointers to avoid ambiguity for calling the destructor. [zeo_vecxd_data]
 2025.10.20. Modified zIntersectPH3D to neglect mutual penetration shorter than ZEO_INTERSECT_PH3D_THRESHOLD. [zeo_col_ph]
