--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,5 @@
+2025.11.03. Added zVec2DDataCapacity and zVec3DDataCapacity. [zeo_vec2d_data, zeo_vec3d_data]
+2025.11.03. Modified _zVecXDDataArraySize, _zVecXDDataArrayCapacity, _zVecXDDataArrayIsEmpty, _zVecXDDataArrayAdd, and zVecXDDataInitArray to reflect new specification of zArray. [zeo_vecxd_data]
 2025.11.02. Redefined the operator == for zVec2D, zVec3D, zVec6D, and zMat3D for C++. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d]
 2025.11.02. Renamed createZYX, createZYZ, and createAA methods of zMat3D to createFromZYX, createFromZYZ, and createFromAA, respectively. [zeo_mat3d]
 2025.11.02. Modified specification of inv method of zMat3D for C++. [zeo_mat3d]
@@ -8,7 +10,6 @@
 2025.11.02. Modified ZEO_VECXD_DATA_DEF_STRUCT to define C++ methods of zVecXDData. [zeo_vecxd_data]
 2025.11.02. Debugged zVecXDData*Fetch. [zeo_vecxd_data]
 2025.11.02 Renamed ZEO_VECXD_DATA_DEF_STATIC_METHOD to _ZEO_VECXD_DATA_DEF_STATIC_METHOD, and redefined ZEO_VECXD_DATA_DEF_STATIC_METHOD to define constructor and destructor for C++. [zeo_vecxd_data]
-2025.11.02. Added _zVecXDDataArrayDirectSize and _zVecXDDataArrayDirectIsEmpty. [zeo_vecxd_data]
 2025.11.02. Abolished _zVecXDDataArrayPtrAdd, and assign _zVecXDDataDummyAdd instead. [zeo_vecxd_data]
 2025.11.02. Modified specifications of _zVecXDDataArraySize and _zVecXDDataArrayIsEmpty to see the currently occupied size of the array. [zeo_vecxd_data]
 2025.11.02. Added member capacity of zVecXDDataMethod, and defined zVecXDDataCapacity, _zVecXDDataDummyCapacity, _zVecXDDataArrayCapacity, _zVecXDDataListCapacity, _zVecXDDataAddrListCapacity, _zVecXDDataArrayPtrCapacity, _zVecXDDataListPtrCapacity, and _zVecXDDataAddrListPtrCapacity. [zeo_vecxd_data]
