Added toPosZYX, toPosZYZ, and toPosAA members of zFrame3D for an array of to double-precision floating-point values. Renamed toZYX, toZYZ, and toAA members of zFrame3D to toPosZYX, toPosZYZ, and toPosAA, respectively. Corrected misspell of a method cascade of zFrame3D for C++. Reimplemented operators +, -, *, and / of zVec6D as friend functions of it. Renamed zFrame2D/3DCopy to _zFrame2D/3DCopy, and reiemplemented zFrame2D/3DCopy. Renamed zMat6DCopy to _zMat6DCopy, and reiemplemented zMat6DCopy. Corrected prototype of zEPDif by adding const qualifiers. Added constructor of zMat6D. Modified zNURBS3DCopy to cast arguments of memcpy to void *. Modified zTri3DListAdd and zTri3DListCopyArray to use zTri3DCopy. Added _zTri3DCopy and zTri3DCopy. Reimplemented operators +, -, and * as friend functions of zEP. Debugged zEPInterDiv not to modify the second argument internally. Renamed zEPCopy to _zEPCopy, and reiemplemented zEPCopy. Added C++ methods of zCoord2D. Renamed zCoord2DCopy to _zCoord2DCopy, and reiemplemented zCoord2DCopy. Added constructors and destructors of zVec2D, zVec3D, zMat2D, zMat3D, and zVec6D. Modified zVec6DFromVec3D to use _zVec3DCopy. Renamed zVec6DCopy to _zVec6DCopy, and reiemplemented zVec6DCopy. Renamed zMat3DCopy to _zMat3DCopy, and reiemplemented zMat3DCopy. Added _zVec3DCopy, and reimplemented zVec3DCopy. Abolished isTiny member of zVec2D, zVec3D, zMat2D, zMat3D, and zVec6D, and added default argument value of isTol member of them. Removed member operators * of zFrame2D and zFrame3D, and defined the operator + as friend functions of them. Removed member operators +, -, *, /, and == of zMat2D and zMat3D, and defined +, -, *, /, and == as friend functions of them. Removed member operators +, -, *, and / of zVec2D and zVec3D, and defined the operators +, -, *, and / as friend functions of them.

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,28 @@
+2026.02.25. Added toPosZYX, toPosZYZ, and toPosAA members of zFrame3D for an array of to double-precision floating-point values. [zeo_frame3d]
+2026.02.25. Renamed toZYX, toZYZ, and toAA members of zFrame3D to toPosZYX, toPosZYZ, and toPosAA, respectively. [zeo_frame3d]
+2026.02.25. Corrected misspell of a method cascade of zFrame3D for C++. [zeo_frame3d]
+2026.02.25. Reimplemented operators +, -, *, and / of zVec6D as friend functions of it. [zeo_vec6d]
+2026.02.25. Renamed zFrame2D/3DCopy to _zFrame2D/3DCopy, and reiemplemented zFrame2D/3DCopy. [zeo_frame2d, zeo_frame3d]
+2026.02.25. Renamed zMat6DCopy to _zMat6DCopy, and reiemplemented zMat6DCopy. [zeo_mat6d]
+2026.02.25. Corrected prototype of zEPDif by adding const qualifiers. [zeo_ep]
+2026.02.25. Added constructor of zMat6D. [zeo_mat6d]
+2026.02.25. Modified zNURBS3DCopy to cast arguments of memcpy to void *. [zeo_nurbs3d]
+2026.02.25. Modified zTri3DListAdd and zTri3DListCopyArray to use zTri3DCopy. [zeo_elem3d_list]
+2026.02.25. Added _zTri3DCopy and zTri3DCopy. [zeo_elem3d]
+2026.02.24. Reimplemented operators +, -, and * as friend functions of zEP. [zeo_ep]
+2026.02.24. Debugged zEPInterDiv not to modify the second argument internally. [zeo_ep]
+2026.02.24. Renamed zEPCopy to _zEPCopy, and reiemplemented zEPCopy. [zeo_ep]
+2026.02.24. Added C++ methods of zCoord2D. [zeo_coord2d]
+2026.02.24. Renamed zCoord2DCopy to _zCoord2DCopy, and reiemplemented zCoord2DCopy. [zeo_coord2d]
+2026.02.24. Added constructors and destructors of zVec2D, zVec3D, zMat2D, zMat3D, and zVec6D. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat2d, zeo_mat3d, zeo_elemxd]
+2026.02.24. Modified zVec6DFromVec3D to use _zVec3DCopy. [zeo_vec6d]
+2026.02.24. Renamed zVec6DCopy to _zVec6DCopy, and reiemplemented zVec6DCopy. [zeo_vec6d]
+2026.02.24. Renamed zMat3DCopy to _zMat3DCopy, and reiemplemented zMat3DCopy. [zeo_mat3d]
+2026.02.24. Added _zVec3DCopy, and reimplemented zVec3DCopy. [zeo_vec3d]
+2026.02.24. Abolished isTiny member of zVec2D, zVec3D, zMat2D, zMat3D, and zVec6D, and added default argument value of isTol member of them. [zeo_vec2d, zeo_vec3d, zeo_mat2d, zeo_mat3d, zeo_vec6d]
+2026.02.24. Removed member operators * of zFrame2D and zFrame3D, and defined the operator + as friend functions of them. [zeo_frame2d, zeo_frame3d]
+2026.02.24. Removed member operators +, -, *, /, and == of zMat2D and zMat3D, and defined +, -, *, /, and == as friend functions of them. [zeo_mat2d, zeo_mat3d]
+2026.02.24. Removed member operators +, -, *, and / of zVec2D and zVec3D, and defined the operators +, -, *, and / as friend functions of them. [zeo_vec2d, zeo_vec3d]
 2026.02.22. Renamed zShapeListCell and zShapeList to zShape3DListCell and zShape3DList, respectively. [zeo_shape3d_List]
 2026.02.21. Renamed mshape2dgp to zeo_multishapeplot. [app]
 2026.02.21. Renamed ZEO_WARN_MSHAPE_* to ZEO_WARN_MULTISHAPE_*. [zeo_errmsg, zeo_multishape3d]
